chore: pools popover upcoming rewards style

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -330,6 +330,7 @@
     },
     "rewards_ended": "Ended",
     "rewards_ends": "Ends",
+    "rewards_starts": "Starts",
     "tvl_dsc": "Trading Volume (dsc)",
     "tvl_asc": "Trading Volume (asc)",
     "lp_dsc": "Liquidity (dsc)",
