feature: add cpmm lock and clmm lock improvment (#52)
* add cpmm lock feauture
* clmm lock improvement
* portfolio lock UI enhancement
---------

Co-authored-by: bradley <bradley@reactorlabs.io>

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -345,10 +345,15 @@
     "locked_percent": "{{percent}} permanently locked",
     "locked_positions": "Locked positions",
     "locked_positions_tip_info": "You previously permanently locked the NFT for this position, however trading fees earned are still fully claimable.",
-    "lock_title": "Burn/Lock Liquidity for CLMM position",
-    "lock_desc1": "Token teams can permanently lock liquidity. The NFT representing your position is sent to a locked token account. Fees will still be claimable.",
-    "lock_desc2": "To start, select a CLMM position below to lock. Ensure that <0>position value and NFT mint</0>  match the position you want to lock!",
-    "lock_desc3": "Note: Technically, your NFT is not burned but permanently locked.",
+    "lock_cpmm_title": "Burn/Lock Liquidity for standard AMM position",
+    "lock_clmm_title": "Burn/Lock Liquidity for CLMM position",
+    "lock_cpmm_set_amount": "Set amount of position to lock:",
+    "lock_cpmm_desc1": "Token teams can permanently lock liquidity. The LP tokens representing your position are sent to a locked token account. Fees will still be claimable.",
+    "lock_cpmm_desc2": "To start, select a standard AMM position below to lock. Ensure that <0>position value and LP balance</0> match the position you want to lock!",
+    "lock_cpmm_desc3": "Note: Technically, LP tokens are not burned but permanently locked.",
+    "lock_clmm_desc1": "Token teams can permanently lock liquidity. The NFT representing your position is sent to a locked token account. Fees will still be claimable.",
+    "lock_clmm_desc2": "To start, select a CLMM position below to lock. Ensure that <0>position value and NFT mint</0>  match the position you want to lock!",
+    "lock_clmm_desc3": "Note: Technically, your NFT is not burned but permanently locked.",
     "lock_desc4": "Are you sure you want to <0>permanently</0> lock/burn liquidity? You will be unable to access or withdraw underlying position assets, only <1>trading fees earned will remain claimable</1>.",
     "nft_mint": "NFT Mint:",
     "lock_liquidity_permanently": "Lock Liquidity Permanently?",
@@ -357,8 +362,21 @@
     "lock_to_confirm": "To confirm, type the following:",
     "lock_confirm_text": "I confirm, permanently lock my liquidity forever",
     "confirm_lock_liquidity_permanently": "Confirm, Lock Liquidity Permanently",
+    "lock_cpmm_positions_empty": "You do not currently have any open standard AMM positions",
     "lock_clmm_positions_empty": "You do not currently have any open CLMM positions",
-    "total_locked_position": "Total locked liquidity in this pool: {{percent}}"
+    "total_locked_position": "Total locked liquidity in this pool: {{percent}}",
+    "position_locked_success": "Position locked successfully!",
+    "nft_desc": "A new NFT is now in your wallet and represents the right to claim trading fees from the locked position. ONLY the NFT holder can claim fees.",
+    "dont_burn_nft": "<sub>DO NOT</sub> burn this NFT or you will lose the ability to claim fees forever! If you send the NFT to another wallet, only the new wallet will be able to claim fees.",
+    "claim_fee": "Claim Fee",
+    "claim_fees": "Claim Fees",
+    "total_fees_locked_liquidity": "Total fees from locked liquidity:",
+    "locked_liquidity": "Locked Liquidity",
+    "locked_liquidity_tooltip": "You previously permanently locked the LP tokens for this position, however trading fees earned are still fully claimable.",
+    "pending_fees": "Pending fees",
+    "locked_lp_amount": "Locked LP Amount",
+    "approx_lp_fees": "Approx LP Fees",
+    "approx_fee_breakdown": "Approx Fee breakdown"
   },
   "create_pool": {
     "modal_title": "I want to...",
@@ -369,7 +387,7 @@
     "modal_section_header_pool_desc_link": "detailed guide",
     "modal_section_header_farm": "Creating a farm",
     "modal_section_header_farm_desc": "Create a farm for any live pool. Read the instructions for <0>CLMM</0> or <1>Standard</1> farms.",
-    "modal_section_header_lock": "Burn & Earn (CLMM)",
+    "modal_section_header_lock": "Burn & Earn",
     "modal_section_header_lock_desc": "Permanently burn/lock liquidity for an existing position. Trading fees remain claimable. <0>Learn more</0>",
     "clmm_please_note": "Please Note",
     "clmm_please_note_des": "This tool is for advanced users. For detailed instructions, read the guide for <0>CLMM</0> or <1>Standard</1> pools.",
@@ -420,7 +438,7 @@
     "min_price": "Min Price",
     "max_price": "Max Price",
     "confirm_deposit": "Confirm Deposit",
-    "you_will_receive": "You will receive",
+    "you_will_receive": "You will receive:",
     "pooled_assets": "Pooled assets",
     "pending_rewards": "Pending rewards",
     "no_clmm_positions": "You don’t have any concentrated liquidity positions.",
@@ -674,6 +692,7 @@
     "harvest_reward_title": "Harvest Rewards",
     "harvest_clmm_reward_desc": "Harvest Clmm Rewards",
     "harvest_farm_reward_desc": "Harvest Farm Rewards",
+    "harvest_lock_reward_desc": "Harvest Locked Position Rewards",
     "update_reward_title": "Update rewards",
     "update_reward_desc": "Update rewards in <sub>{{pool}}</sub>",
     "create_pool": "Create pool",
