--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -348,9 +348,10 @@
     "lock_cpmm_title": "Burn/Lock Liquidity for standard AMM position",
     "lock_clmm_title": "Burn/Lock Liquidity for CLMM position",
     "lock_cpmm_set_amount": "Set amount of position to lock:",
-    "lock_cpmm_desc1": "Token teams can permanently lock liquidity. The LP tokens representing your position are sent to a locked token account. Fees will still be claimable.",
+    "lock_cpmm_desc1": "Token teams can permanently lock liquidity. The LP tokens representing your position is sent to a locked token account. Fees will still be claimable.",
     "lock_cpmm_desc2": "To start, select a standard AMM position below to lock. Ensure that <0>position value and LP balance</0> match the position you want to lock!",
-    "lock_cpmm_desc3": "Note: Technically, LP tokens are not burned but permanently locked.",
+    "lock_cpmm_desc3": "Note: Technically, your LP tokens are not burned but permanently locked.",
+    "lock_cpmm_desc4": "NOTE: This feature only supports CPMM pools created on the UI. Older V4 pools are not supported at this time.<0>Learn more here.</0>",
     "lock_clmm_desc1": "Token teams can permanently lock liquidity. The NFT representing your position is sent to a locked token account. Fees will still be claimable.",
     "lock_clmm_desc2": "To start, select a CLMM position below to lock. Ensure that <0>position value and NFT mint</0>  match the position you want to lock!",
     "lock_clmm_desc3": "Note: Technically, your NFT is not burned but permanently locked.",
